--- a/components/Footer.css
+++ b/components/Footer.css
@@ -4,7 +4,7 @@ footer {
     display: flex;
     align-items: center;
     padding-block: 16px;
-    background-color: red;
+    background-color: white;
     box-shadow: 0px 16px 20px rgb(150, 150, 150);
 
     section {
