--- a/components/Main.css
+++ b/components/Main.css
@@ -19,7 +19,7 @@
 
     &>* {
         margin-block: 1rem;
-        max-width: 500px;
+        /* max-width: 500px; */
         width: 100%;
 
         &>* {
@@ -37,10 +37,4 @@
         text-align: left;
         margin-bottom: 16px;
     }
-}
-
-ul {
-    padding: 0;
-    margin: auto;
-    list-style: none;
 }
