--- a/style/default.css
+++ b/style/default.css
@@ -45,11 +45,11 @@ h1 {
     font-size: 1.5rem;
 }
 
-h2 {}
-
-h3 {}
-
 h4 {
     font-size: 1.2rem;
     margin-block: 0.5rem;
+}
+
+.form {
+    max-width: 500px;
 }
