--- a/components/SectionProyectos.css
+++ b/components/SectionProyectos.css
@@ -37,3 +37,29 @@ li {
     margin: 0;
     padding: 0;
 }
+
+.filters {
+    width: 100%;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    margin-bottom: 16px;
+
+    &>* {
+        margin: 0 8px;
+        height: 2rem;
+    }
+
+    label {
+        margin-bottom: 8px;
+        font-weight: bold;
+    }
+
+    select {
+        padding: 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        width: 100%;
+        max-width: 200px;
+    }
+}
