--- a/components/SectionProyectos.css
+++ b/components/SectionProyectos.css
@@ -41,13 +41,15 @@ li {
 .filters {
     width: 100%;
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 16px;
 
     &>* {
-        margin: 0 8px;
+        margin: 8px 8px;
         height: 2rem;
+        width: 250px;
     }
 
     label {
